k-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k-ingress
  namespace: githubrepo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: http://skiffy.mlhuillier.com  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k-service
                port:
                  number: 80
